# micro-platform

./: README.md
app.api/: .env.example  README.md  global.js  init.js  package.json  pnpm-lock.yaml  test.js
app.console/: .env.example  README.md  nginx-app.conf  package.json  pnpm-lock.yaml
console/: .env.example  README.md  nginx-console.conf  package.json  pnpm-lock.yaml
doc.api/: .env.example  README.md  app.js  global.js  init.js  initData.js  package.json  pnpm-lock.yaml  test.js
llm.api/: .env.example  README.md  app.js  global.js  init.js  package-lock.json  package.json  pnpm-lock.yaml  server.js  test.js
pdfviewer.console/: .env.example  README.md  nginx-pdfviewer.conf  package.json  pnpm-lock.yaml
rag.api/: .env.example  README.md  global.js  init.js  package.json  pnpm-lock.yaml  test-llm.js  test.js
rag.console/: .env.example  README.md  nginx-rag.conf  package.json  pnpm-lock.yaml
resource.api/: .env.example  README.md  global.js  init.js  package.json  pnpm-lock.yaml  test.js
statistic.api/: .env.example  README.md  global.js  init.js  (+3 more)
transform.api/: .env.example  Dockerfile  README.md  grpc_server.py  pyproject.toml  test.py
transform.api/configs/: __init__.py
transform.api/grpcs/servers/: converter.proto  converter_pb2.py  converter_pb2_grpc.py  converter_server.py  extractor_pb2.py  extractor_pb2_grpc.py  extractor_server.py  generator.sh  helloworld_pb2.py  helloworld_pb2_grpc.py  helloworld_server.py  nlp_analyzer_pb2.py  nlp_analyzer_pb2_grpc.py  nlp_analyzer_server.py
transform.api/services/: excel.py  ocr.py  pdf.py
(+718 files in other folders)
